Neon: sync LogicSugar v5.3.0 (in-card operations, editor conflict coexist, selection clipboard)