@@ -14,6 +14,7 @@ import mindustry.logic.SugarCanvas;
 import mindustry.logic.SugarStatements;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -47,8 +48,8 @@ public class BitsetModule extends DataModule{
     /** analyze 阶段方法糖解析用的轻量声明扫描（不依赖 collect 注册表）。 */
     @Override
     public Map<String, String> declaredKinds(LStatement statement){
-        if(statement instanceof BitsetStatement card && card.name != null && !card.name.trim().isEmpty()) return Map.of(card.name.trim(), ID);
-        return Map.of();
+        if(statement instanceof BitsetStatement card && card.name != null && !card.name.trim().isEmpty()) return Collections.singletonMap(card.name.trim(), ID);
+        return Collections.emptyMap();
     }
 
     @Override
@@ -220,10 +221,10 @@ public class BitsetModule extends DataModule{
             return "bitset '" + name + "' words must be an integer literal of at least 1, got '" + card.words + "'";
         }
         long end = base + words;
-        int capacity = ArrayRegistry.memoryCapacity(memory);
+        int capacity = ArrayRegistry.capacityOf(memory);
         if(capacity > 0 && end > capacity){
-            return "bitset '" + name + "' needs addresses up to " + (end - 1)
-                + ", but memory '" + memory + "' only has " + capacity + " slots";
+            return "bitset '" + name + "' needs addresses up to "
+                + ArrayRegistry.capacityExceeded(memory, end, capacity);
         }
         List<long[]> existing = spans.get(memory);
         if(existing != null){
