@@ -13,6 +13,7 @@ import mindustry.logic.SugarCanvas;
 import mindustry.logic.SugarStatements;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -64,9 +65,9 @@ public class ListHeapModule extends DataModule{
     /** analyze 阶段方法糖解析用的轻量声明扫描（不依赖 collect 注册表）。 */
     @Override
     public Map<String, String> declaredKinds(LStatement statement){
-        if(statement instanceof ListDeclStatement card && card.name != null && !card.name.trim().isEmpty()) return Map.of(card.name.trim(), KIND_LIST);
-        if(statement instanceof HeapDeclStatement card && card.name != null && !card.name.trim().isEmpty()) return Map.of(card.name.trim(), KIND_HEAP);
-        return Map.of();
+        if(statement instanceof ListDeclStatement card && card.name != null && !card.name.trim().isEmpty()) return Collections.singletonMap(card.name.trim(), KIND_LIST);
+        if(statement instanceof HeapDeclStatement card && card.name != null && !card.name.trim().isEmpty()) return Collections.singletonMap(card.name.trim(), KIND_HEAP);
+        return Collections.emptyMap();
     }
 
     @Override
@@ -392,7 +393,7 @@ public class ListHeapModule extends DataModule{
                 || externalNames.contains(name)
                 || (functionNames != null && functionNames.contains(name));
             if(!bad){
-                int capacity = ArrayRegistry.memoryCapacity(memory);
+                int capacity = ArrayRegistry.capacityOf(memory);
                 bad = capacity > 0 && base + size > capacity;
             }
             if(!bad){
@@ -456,10 +457,10 @@ public class ListHeapModule extends DataModule{
     }
 
     private static void checkCapacity(String kind, int index, String name, String memory, long end){
-        int capacity = ArrayRegistry.memoryCapacity(memory);
+        int capacity = ArrayRegistry.capacityOf(memory);
         if(capacity > 0 && end > capacity){
-            throw error(kind, index, "'" + name + "' needs addresses up to " + (end - 1)
-                + ", but memory '" + memory + "' only has " + capacity + " slots");
+            throw error(kind, index, "'" + name + "' needs addresses up to "
+                + ArrayRegistry.capacityExceeded(memory, end, capacity));
         }
     }
 
