@@ -36,6 +36,7 @@ import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -149,8 +150,12 @@ public final class SugarFunctions{
         }
     }
 
-    /** {@link #withLibraryLimit(Runnable)} for actions that return a value. */
-    public static <T> T withLibraryLimitValue(java.util.function.Supplier<T> action){
+    /** {@link #withLibraryLimit(Runnable)} for actions that return a value.
+     *
+     *  <p>Takes {@code arc.func.Prov} rather than {@code java.util.function.Supplier}: the latter
+     *  is API 24 and is not backported by D8 here (no core-library desugaring), so it would throw
+     *  {@code NoSuchMethodError} on API 21-23 devices.</p> */
+    public static <T> T withLibraryLimitValue(arc.func.Prov<T> action){
         int previous = LExecutor.maxInstructions;
         if(previous < libraryInstructionLimit) LExecutor.maxInstructions = libraryInstructionLimit;
         try{
@@ -612,6 +617,22 @@ public final class SugarFunctions{
      * into {@link #exitTarget} as usual, and body targets become body-relative.
      */
     public static String extractLibrarySource(String libraryText, Set<String> usedNames){
+        return extractLibrarySource(libraryText, usedNames, 0);
+    }
+
+    /**
+     * {@link #extractLibrarySource(String, Set)} with an explicit {@code outBase}: the number of
+     * statements that already precede this slice in the text it is appended to.
+     *
+     * <p>A funcdef/begin/jump {@code destIndex} is an <em>absolute</em> statement index of the
+     * library text it belongs to ("must point to a block end below it"), so a slice concatenated
+     * after another one must be shifted by that prefix length. Merging an embedded
+     * {@code __ls_lib} subset with the newly used functions of the local library file is exactly
+     * that case: without the shift every appended funcdef points back into the prefix and is
+     * rejected as damaged, which silently drops the function from the effective library.
+     * Callers appending to an empty builder pass 0 (the default overload).
+     */
+    public static String extractLibrarySource(String libraryText, Set<String> usedNames, int outBase){
         Seq<LStatement> statements = readLibrary(libraryText, true);
         int n = statements.size;
         int[] endOf = new int[n];
@@ -627,7 +648,7 @@ public final class SugarFunctions{
         for(int i = 0; i < n; i++){
             int e = endOf[i];
             if(e < 0) continue;
-            appended += copySlice(statements, i, e, out, appended);
+            appended += copySlice(statements, i, e, out, outBase + appended);
         }
         return out.toString();
     }
@@ -721,12 +742,12 @@ public final class SugarFunctions{
             statements = readLibrary(text, true);
         }catch(Throwable t){
             String message = "the library text cannot be parsed: " + t.getMessage();
-            return new SanitizedLibrary("", new LibraryIndex(), List.of(message), true);
+            return new SanitizedLibrary("", new LibraryIndex(), Collections.singletonList(message), true);
         }
 
         // Fast path: the whole library validates unchanged (output must equal the input).
         try{
-            return new SanitizedLibrary(text, buildLibrary(statements), List.of(), false);
+            return new SanitizedLibrary(text, buildLibrary(statements), Collections.emptyList(), false);
         }catch(IllegalArgumentException ignored){
             // buildLibrary remaps the bodies it processed before failing; parse again fresh
             statements = readLibrary(text, true);
@@ -1162,24 +1183,162 @@ public final class SugarFunctions{
         return ((FuncDefStatement)statements.get(funcdefIndex)).name;
     }
 
-    /** Splits a comma-separated argument list, respecting parentheses. */
+    /**
+     * Splits a comma-separated argument list, respecting parentheses **and string literals**.
+     *
+     * <p>Quotes matter: a comma or an unbalanced bracket inside {@code "..."} is text, not structure.
+     * Ignoring them used to merge arguments - {@code array_replace [buf, "a(b", 5]} split into two
+     * segments instead of three, because the {@code (} inside the literal left the depth at 1 and the
+     * following comma stopped splitting - and every consumer that rebuilds the list from its segments
+     * (the fixed-slot card UI) then silently rewrote the call signature.</p>
+     */
     public static List<String> splitArgs(String args){
         List<String> result = new ArrayList<>();
         if(args == null || args.trim().isEmpty()) return result;
         int depth = 0, start = 0;
+        boolean quoted = false, escaped = false;
         for(int i = 0; i < args.length(); i++){
             char c = args.charAt(i);
-            if(c == '('){
+            if(escaped){
+                escaped = false;
+            }else if(quoted && c == '\\'){
+                escaped = true;
+            }else if(c == '"'){
+                quoted = !quoted;
+            }else if(!quoted && c == '('){
                 depth++;
-            }else if(c == ')'){
+            }else if(!quoted && c == ')'){
                 depth--;
-            }else if(c == ',' && depth == 0){
+            }else if(!quoted && c == ',' && depth == 0){
                 result.add(args.substring(start, i).trim());
                 start = i + 1;
             }
         }
         result.add(args.substring(start).trim());
         return result;
+    }
+
+    /**
+     * Like {@link #splitArgs}, but **tolerant of a list that is not finished yet**: a bracket or
+     * quote that never gets closed does not swallow the separators after it.
+     *
+     * <p>This exists for the fixed-slot operation card, which shows one box per parameter and must
+     * therefore decide the box boundaries from the raw argument text <em>while the user is
+     * typing</em>. Typing {@code (} to start a nested call - or {@code "} to start a string
+     * literal - leaves the whole list unbalanced until the call is finished, and that is the normal
+     * state of the text for as long as it takes to type the rest. A strict split reads an unclosed
+     * {@code (} as "everything after me is nested", so it returns the whole list as a single
+     * segment: the first box then absorbs everything and the remaining boxes come up empty (the
+     * text the user already typed appears to jump out of its box, and reopening the card cannot
+     * recover the layout because the split is derived from the stored text alone).</p>
+     *
+     * <p>Only the brackets that actually pair up are allowed to nest, and only the quotes that pair
+     * up are allowed to quote - a trailing unpaired one is inert. For a well-formed list every
+     * bracket and quote pairs, so the result is <b>identical to {@link #splitArgs}</b>; the two can
+     * only disagree on input that fails to compile, where the card's job is to keep showing the user
+     * what they typed. The compiler keeps calling {@link #splitArgs}: an unbalanced list is refused
+     * by {@code DataModules.callShapeInvalid} and by the trial compile, with a message about the
+     * unfinished expression.</p>
+     *
+     * <p>Escape handling mirrors {@link #splitArgs} (a backslash escapes the next character inside a
+     * quote). An unpaired quote can legitimately change which bracket positions were treated as
+     * quoting during the first pass, so on malformed input this is best-effort - it is a layout
+     * decision for text that has no valid reading at all.</p>
+     */
+    public static List<String> splitArgsLenient(String args){
+        List<String> result = new ArrayList<>();
+        if(args == null || args.trim().isEmpty()) return result;
+        int n = args.length();
+        boolean[] openMatched = new boolean[n], closeMatched = new boolean[n];
+        int[] stack = new int[n];
+        int top = 0, quoteCount = 0;
+        boolean quoted = false, escaped = false;
+
+        // Pass 1: collect the bracket pairs (ignoring what is inside quotes) and count the quotes.
+        for(int i = 0; i < n; i++){
+            char c = args.charAt(i);
+            if(escaped){
+                escaped = false;
+            }else if(quoted && c == '\\'){
+                escaped = true;
+            }else if(c == '"'){
+                quoteCount++;
+                quoted = !quoted;
+            }else if(!quoted){
+                if(c == '('){
+                    stack[top++] = i;
+                }else if(c == ')' && top > 0){
+                    openMatched[stack[--top]] = true;
+                    closeMatched[i] = true;
+                }
+            }
+        }
+
+        // Only paired quotes may quote: a trailing unpaired one would otherwise turn every later
+        // separator into quoted text, which is the quote-shaped version of the same defect.
+        int pairedQuotes = quoteCount - (quoteCount & 1);
+
+        // Pass 2: split at the commas that are at depth 0. Depth moves only for matched brackets,
+        // so an unclosed '(' leaves the separators after it visible to this pass.
+        int depth = 0, start = 0, seenQuotes = 0;
+        quoted = false;
+        escaped = false;
+        for(int i = 0; i < n; i++){
+            char c = args.charAt(i);
+            if(escaped){
+                escaped = false;
+            }else if(quoted && c == '\\'){
+                escaped = true;
+            }else if(c == '"'){
+                if(seenQuotes < pairedQuotes) quoted = !quoted;
+                seenQuotes++;
+            }else if(!quoted){
+                if(c == '(' && openMatched[i]){
+                    depth++;
+                }else if(c == ')' && closeMatched[i]){
+                    depth--;
+                }else if(c == ',' && depth == 0){
+                    result.add(args.substring(start, i).trim());
+                    start = i + 1;
+                }
+            }
+        }
+        result.add(args.substring(start).trim());
+        return result;
+    }
+
+    /**
+     * Whether {@code args} is a well-formed argument list: every {@code (} matched, every string
+     * literal closed, no stray {@code )}.
+     *
+     * <p>This answers "is this a complete expression list" - a <em>validity</em> question. It is
+     * not what splitting needs: {@link #splitArgs} only ever cuts at top-level commas, so the
+     * segment boundaries are just as clear while the user is midway through typing {@code f(a,}.
+     * The fixed-slot card therefore does <em>not</em> refuse an unbalanced list - it used to, and
+     * the cost was that every keystroke after the {@code (} was dropped and the card collapsed to
+     * a single field on reopen. The invalid-list decision belongs to
+     * {@code DataModules.callShapeInvalid} (red marking) and to the trial compile; see
+     * {@code DataCallStatement.argumentSlots()}.</p>
+     */
+    public static boolean balancedArgs(String args){
+        if(args == null) return true;
+        int depth = 0;
+        boolean quoted = false, escaped = false;
+        for(int i = 0; i < args.length(); i++){
+            char c = args.charAt(i);
+            if(escaped){
+                escaped = false;
+            }else if(quoted && c == '\\'){
+                escaped = true;
+            }else if(c == '"'){
+                quoted = !quoted;
+            }else if(!quoted && c == '('){
+                depth++;
+            }else if(!quoted && c == ')'){
+                if(--depth < 0) return false;
+            }
+        }
+        return depth == 0 && !quoted;
     }
 
     // ===== body preparation ===============================================================
@@ -1702,6 +1861,26 @@ public final class SugarFunctions{
             throw new IllegalArgumentException("data call '" + operation + "' requires a destination variable");
         }
         String args = call.arguments == null ? "" : call.arguments;
+        // Arity is part of the shape, and the one-box-per-parameter card makes "the last box was left
+        // empty" the most common mistake. Without this the call falls through to the expression
+        // compiler, which can only answer "unknown function" - a message that says nothing about the
+        // argument count. Saving must refuse either direction.
+        //
+        // The editor paints both red, through different layers: DataModules.callShapeInvalid flags
+        // "more arguments than parameters", while "fewer arguments than parameters" is left to the
+        // trial compile in the second layer. Red is about the mistake, not about the card's shape:
+        // the card keeps its fixed slots either way - extras are merged into the last slot, and a
+        // short list keeps its empty boxes under the parameter-name placeholders, which is exactly
+        // how it shows what is still missing
+        // (DataCallTest.argumentSlotsAreFixedAndLossless pins that padding).
+        int expectedArgs = DataModules.paletteParams(operation).size();
+        if(expectedArgs > 0){
+            int actualArgs = splitArgs(args).size();
+            if(actualArgs != expectedArgs){
+                throw new IllegalArgumentException("data call '" + operation + "' takes " + expectedArgs
+                    + " argument(s) but got " + actualArgs + ": \"" + args + "\"");
+            }
+        }
         List<ExprCompiler.Line> lines;
         try{
             lines = ExprCompiler.compileForcedIntrinsic(destination, operation, args,
